--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
         cache: maven # 缓存m2仓库以加速构建
     - name: Build with Maven
       run: mvn -B clean package --file pom.xml
+    - name: Set Timezone
+      run: export TZ=Asia/Shanghai
     - name: Run JUnit tests
       run: mvn -B verify --file pom.xml
     - name: Collect Test Results
