--- a/pom.xml
+++ b/pom.xml
@@ -336,7 +336,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.2.5</version>
                     <configuration>
-                        <argLine>${powermock.jdk11.argLine} -Duser.timezone=Asia/Shanghai</argLine>
+                        <argLine>${powermock.jdk11.argLine}</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
