update adf conf and support load notebook files from local

--- a/client/migrationx/migrationx-transformer/src/main/conf/adf-mc-transformer-config.json
+++ b/client/migrationx/migrationx-transformer/src/main/conf/adf-mc-transformer-config.json
@@ -8,6 +8,10 @@
     "nodeTypeMappings": {
       "DatabricksNotebook": "ODPS_SQL"
     },
-    "unknownNodeType": "DIDE_SHELL"
+    "unknownNodeType": "DIDE_SHELL",
+    "notebookLocalPath" :  {
+      "removePrefix": "/Repos/NGBI/PRD/",
+      "addPrefix": "/Users/xichen/Documents/github_repos/sqlfiles/"
+    }
   }
 }
