--- a/client/migrationx/pom.xml
+++ b/client/migrationx/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.aliyun.dataworks</groupId>
         <artifactId>client</artifactId>
-        <version>1.1.9-8</version>
+        <version>1.1.9-10</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -133,13 +133,6 @@
                 <artifactId>reflections</artifactId>
                 <version>0.9.11</version>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/com.aliyun.oss/aliyun-sdk-oss -->
-            <dependency>
-                <groupId>com.aliyun.oss</groupId>
-                <artifactId>aliyun-sdk-oss</artifactId>
-                <version>3.11.0</version>
-            </dependency>
-
             <dependency>
                 <artifactId>json-smart</artifactId>
                 <groupId>net.minidev</groupId>
@@ -185,30 +178,6 @@
                 <artifactId>commons-collections4</artifactId>
                 <version>4.3</version>
             </dependency>
-            <!-- spring dependencies -->
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-web</artifactId>
-                <version>6.0.9</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.shell</groupId>
-                <artifactId>spring-shell-starter</artifactId>
-                <version>2.0.1.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-parent</artifactId>
-                <type>pom</type>
-                <scope>import</scope>
-                <version>2.7.6</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-thymeleaf</artifactId>
-                <version>2.7.3</version>
-            </dependency>
-
             <dependency>
                 <groupId>org.hibernate.validator</groupId>
                 <artifactId>hibernate-validator</artifactId>
@@ -408,6 +377,7 @@
                 <configuration>
                     <outputDirectory>${project.basedir}/target/migrationx/lib/common</outputDirectory>
                     <excludeTransitive>false</excludeTransitive>
+                    <includeScope>runtime</includeScope>
                 </configuration>
             </plugin>
 
