--- a/client/migrationx/migrationx-transformer/src/main/conf/dataworks-transformer-config.json
+++ b/client/migrationx/migrationx-transformer/src/main/conf/dataworks-transformer-config.json
@@ -5,15 +5,9 @@
   "transformContinueWithError": true,
   "specContinueWithError": true,
   "filterTasks": [
-    "ff.python112.*"
   ],
   "settings": {
-    "workflow.converter.shellNodeType": {
-      "ff.shell1.shell2": "DIDE_SHELL",
-      "ff.shell1.*": "EMR_SHELL",
-      "ff.*": "EMR_SHELL",
-      "*": "EMR_SHELL"
-    },
+    "workflow.converter.shellNodeType": "DIDE_SHELL",
     "workflow.converter.commandSqlAs": "EMR_HIVE",
     "workflow.converter.sparkSubmitAs": "EMR_SPARK",
     "workflow.converter.target.unknownNodeTypeAs": "DIDE_SHELL",
